# verse-lsp

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.scope/: index.db
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: verse-lsp-highlighting.md  verse-lsp-implementation.md
crates/verse-analysis/: Cargo.toml
crates/verse-analysis/src/: completion.rs  definition.rs  diagnostics.rs  documents.rs  hover.rs  lib.rs  signature_help.rs  util.rs  workspace.rs
crates/verse-lsp/: Cargo.toml
crates/verse-lsp/src/: handlers.rs  main.rs
crates/verse-lsp/tests/: handler_integration.rs
crates/verse-parser/: Cargo.toml
crates/verse-parser/src/: database.rs  lexer.rs  lib.rs  parser.rs  symbol.rs
crates/verse-parser/tests/: parser_tests.rs
digests/: Fortnite.digest.verse  UnrealEngine.digest.verse  Verse.digest.verse
extensions/vscode/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode/snippets/: verse-snippets.json
extensions/vscode/src/: extension.ts
extensions/vscode/syntaxes/: verse.tmLanguage.json
extensions/vscode/themes/: verse-dark.tmTheme.json
