[workspace]
resolver = "2"
members = [
    "crates/verse-parser",
    "crates/verse-analysis",
    "crates/verse-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Verse LSP Contributors"]
license = "MIT"
repository = "https://github.com/verse-lang/verse-lsp"

[workspace.dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
regex = "1"
lazy_static = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
