[package]
name = "verse-lsp"
version = "0.1.0"
edition = "2021"
description = "Verse Language Server - community LSP implementation"

[dependencies]
verse-parser = { path = "../verse-parser" }
verse-analysis = { path = "../verse-analysis" }
tower-lsp-server = "0.23"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
regex = "1"
lazy_static = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["compile"]
compile = []
